--- a/Occasions.html
+++ b/Occasions.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<h1 >Dates to Remember</h1>
+		<img src="BirthdayCake.jpg" alt="Birthday Cake" style="width:350px;height:228px">
+    <h1 >Dates to Remember</h1>
 	</head>
 	<body>
 		<p >Occasion to remember</p>
